--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,15 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import { MatchListItem } from "../components/MatchListItem";
+import Layout from "../layouts/Layout.astro";
+import { statsApi } from "../util/stats-api";
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const matches = await statsApi.fetchGroups();
 ---
 
 <Layout>
-	<Welcome />
+  <div class="flex flex-col">
+    <ul class="list-none p-4">
+      {matches.map((match) => <MatchListItem match={match} />)}
+    </ul>
+  </div>
 </Layout>
