--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const matches = await statsApi.fetchGroups();
 
 <Layout>
   <div class="flex flex-col">
-    <ul class="list-none p-4">
+    <ul class="list-none">
       {matches.map((match) => <MatchListItem match={match} />)}
     </ul>
   </div>
