--- a/src/pages/matches/[match].astro
+++ b/src/pages/matches/[match].astro
@@ -1,7 +1,11 @@
 ---
+import Layout from "../../layouts/Layout.astro";
+
 const { match } = Astro.params;
 ---
 
-<div>
-  <h1>Hello from {match}</h1>
-</div>
+<Layout>
+  <div>
+    <h1>Hello from {match}</h1>
+  </div>
+</Layout>
