--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,7 +40,7 @@ const { frontmatter } = Astro.props;
     <title>Astro Basics</title>
   </head>
   <body class="h-full w-full m-0">
-    <main class="max-w-screen-lg mx-auto">
+    <main class="max-w-[1100px] mx-auto">
       <slot />
     </main>
   </body>
