--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ const matches = await statsApi.fetchGroups();
   }}
 >
   <div class="flex flex-col">
+    <h1 class="text-4xl my-6 text-center">ETLegacy Stats</h1>
     <ul class="list-none">
       {matches.map((match) => <MatchListItem match={match} />)}
     </ul>
