--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,5 @@
 ---
-import "@fontsource-variable/rubik/wght.css";
-import rubikWoff2 from "@fontsource-variable/rubik/files/rubik-latin-wght-normal.woff2?url";
-import "@fontsource/geist-mono";
+import "@fontsource-variable/nunito-sans";
 import Head from "../components/Head.astro";
 import "../assets/global.css";
 
@@ -23,20 +21,6 @@ const { frontmatter } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/etl.svg" />
     <meta name="generator" content={Astro.generator} />
-    <link
-      rel="preload"
-      as="font"
-      type="font/woff2"
-      href={rubikWoff2}
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      as="font"
-      type="font/woff2"
-      href="/fonts/MonaspaceNeon-Regular-v1.101.woff2"
-      crossorigin="anonymous"
-    />
     <title>Astro Basics</title>
   </head>
   <body class="h-full w-full m-0">
