--- a/src/pages/matches/[match]/index.astro
+++ b/src/pages/matches/[match]/index.astro
@@ -5,6 +5,7 @@ import { MapsMenu } from "../../../components/MapsMenu";
 import { statsApi } from "../../../util/stats-api";
 import { StatsTable } from "../../../components/StatsTable";
 import { getMapStats, getMatchStats } from "../../../util/stats";
+import { WeaponAwards } from "../../../components/WeaponAwards";
 
 const { match } = Astro.params;
 const matchDetails = await statsApi.fetchGroupDetails(+match!);
@@ -21,4 +22,5 @@ const allStats = getMapStats("all", [], matchStats);
   <MatchHeader match={matchStats} />
   <MapsMenu matchId={match!} match={matchStats} />
   <StatsTable client:load stats={allStats} />
+  <WeaponAwards match={matchStats} />
 </Layout>
