--- a/src/pages/matches/[match]/index.astro
+++ b/src/pages/matches/[match]/index.astro
@@ -5,12 +5,15 @@ import { MapsMenu } from "../../../components/MapsMenu";
 import { statsApi } from "../../../util/stats-api";
 import { StatsTable } from "../../../components/StatsTable";
 import { getMapStats, getMatchStats } from "../../../util/stats";
-import { WeaponAwards } from "../../../components/WeaponAwards";
+import { AwardsList } from "../../../components/AwardsList";
+import { getAllWeaponAwards, getAllSillyAwards } from "../../../util/awards";
 
 const { match } = Astro.params;
 const matchDetails = await statsApi.fetchGroupDetails(+match!);
 const matchStats = getMatchStats(matchDetails);
 const allStats = getMapStats("all", [], matchStats);
+const sillyAwards = getAllSillyAwards(allStats);
+const weaponAwards = getAllWeaponAwards(allStats);
 ---
 
 <Layout
@@ -22,5 +25,6 @@ const allStats = getMapStats("all", [], matchStats);
   <MatchHeader match={matchStats} />
   <MapsMenu matchId={match!} match={matchStats} />
   <StatsTable client:load stats={allStats} />
-  <WeaponAwards match={matchStats} />
+  <AwardsList client:load awards={sillyAwards} title="Match awards" />
+  <AwardsList client:load awards={weaponAwards} title="Weapon awards" />
 </Layout>
