--- a/src/pages/matches/[match]/index.astro
+++ b/src/pages/matches/[match]/index.astro
@@ -9,7 +9,7 @@ import { AwardsList } from "../../../components/AwardsList";
 import { getAllWeaponAwards, getAllSillyAwards } from "../../../util/awards";
 
 const { match } = Astro.params;
-const matchDetails = await statsApi.fetchGroupDetails(+match!);
+const matchDetails = await statsApi.fetchGroupDetails(match!);
 const matchStats = getMatchStats(matchDetails);
 const allStats = getMapStats("all", [], matchStats);
 const sillyAwards = getAllSillyAwards(allStats, matchDetails.match.match_id);
