--- a/src/pages/matches/[match]/[map]/index.astro
+++ b/src/pages/matches/[match]/[map]/index.astro
@@ -1,5 +1,5 @@
 ---
-import MatchDetailsLayout from "../../../layouts/MatchDetailsLayout.astro";
+import MatchDetailsLayout from "../../../../layouts/MatchDetailsLayout.astro";
 import { MatchHeader } from "../../../../components/MatchHeader";
 import { statsApi, type PlayerInfoDict } from "../../../../util/stats-api";
 import { StatsTable } from "../../../../components/StatsTable";
