--- a/src/layouts/MatchDetailsLayout.astro
+++ b/src/layouts/MatchDetailsLayout.astro
@@ -14,7 +14,10 @@ const { frontmatter } = Astro.props;
 ---
 
 <!doctype html>
-<html class="h-full w-full m-0 bg-mud-800 text-bush-50 antialiased" lang="en">
+<html
+  class="h-full w-full m-0 bg-mud-800 text-bush-50 antialiased scrollbar-thin"
+  lang="en"
+>
   <head>
     <Head {...frontmatter} />
     <meta charset="UTF-8" />
