Allow mobile view

--- a/src/layouts/MatchDetailsLayout.astro
+++ b/src/layouts/MatchDetailsLayout.astro
@@ -27,7 +27,7 @@ const { frontmatter } = Astro.props;
     <title>Astro Basics</title>
   </head>
   <body class="h-full w-full m-0">
-    <main class="max-w-[1300px] mx-auto">
+    <main class="max-w-[1300px] mx-auto overflow-hidden">
       <slot />
     </main>
   </body>
