--- a/src/pages/matches/[match]/[map]/index.astro
+++ b/src/pages/matches/[match]/[map]/index.astro
@@ -11,6 +11,11 @@ import { getAllWeaponAwards, getAllSillyAwards } from "../../../../util/awards";
 const { match, map } = Astro.params;
 const roundsQuery = Astro.url.searchParams.get("round");
 const matchDetails = await statsApi.fetchGroupDetails(match!);
+
+if (matchDetails.match) {
+  Astro.response.headers.set("Cache-Tag", `match-details-${match}`);
+}
+
 const matchStats = getMatchStats(matchDetails);
 
 const parseRoundsQuery = (roundsQuery: string) => {
