--- a/src/pages/matches/[match]/index.astro
+++ b/src/pages/matches/[match]/index.astro
@@ -1,15 +1,16 @@
 ---
 import MatchDetailsLayout from "../../../layouts/MatchDetailsLayout.astro";
 import { MatchHeader } from "../../../components/MatchHeader";
-import { MapsMenu } from "../../../components/MapsMenu";
 import { statsApi, type PlayerInfoDict } from "../../../util/stats-api";
 import { StatsTable } from "../../../components/StatsTable";
 import { getMapStats, getMatchStats } from "../../../util/stats";
+import { MapsMenu } from "../../../components/MapsMenu";
 import { AwardsList } from "../../../components/AwardsList";
 import { getAllWeaponAwards, getAllSillyAwards } from "../../../util/awards";
 
 const { match } = Astro.params;
-
+const roundsQuery = Astro.url.searchParams.get("round");
+const mapQuery = Astro.url.searchParams.get("map");
 const matchDetails = await statsApi.fetchGroupDetails(match!);
 
 if (matchDetails.match) {
@@ -17,7 +18,15 @@ if (matchDetails.match) {
 }
 
 const matchStats = getMatchStats(matchDetails);
-const allStats = getMapStats("all", [], matchStats);
+
+const parseRoundsQuery = (roundsQuery: string) => {
+  return Number(roundsQuery);
+};
+
+const map = mapQuery ?? "all";
+const parsedQuery = roundsQuery ? parseRoundsQuery(roundsQuery) : 0;
+const rounds = parsedQuery ? [parsedQuery] : [];
+const allStats = getMapStats(map, rounds, matchStats);
 const sillyAwards = getAllSillyAwards(allStats, matchDetails.match.match_id);
 const weaponAwards = getAllWeaponAwards(allStats);
 const playerGuids = [...matchStats.teams.beta, ...matchStats.teams.alpha].map(
@@ -40,9 +49,14 @@ const playerInfoDict = playerDiscordNames.reduce((acc, player) => {
     description: `Stats for match ${match}`,
   }}
 >
-  <MatchHeader match={matchStats} />
-  <MapsMenu matchId={match!} match={matchStats} />
-  <StatsTable client:load stats={allStats} playerInfoDict={playerInfoDict} />
+  <MatchHeader activeMap={map} match={matchStats} />
+  <MapsMenu
+    activeRound={parsedQuery}
+    activeMap={map}
+    matchId={match!}
+    match={matchStats}
+  />
+  <StatsTable playerInfoDict={playerInfoDict} client:load stats={allStats} />
   <AwardsList client:load awards={sillyAwards} title="Match awards" />
   <AwardsList client:load awards={weaponAwards} title="Weapon awards" />
 </MatchDetailsLayout>
