--- a/astro-server/src/pages/index.astro
+++ b/astro-server/src/pages/index.astro
@@ -1,10 +1,33 @@
 ---
 import { MatchList } from "../components/MatchList";
 import MatchListLayout from "../layouts/MatchListLayout.astro";
+import { MatchPagination } from "../components/MatchPagination.tsx";
 import { statsApi } from "../util/stats-api";
 
-const type = Astro.url.searchParams.get("type");
-const matches = await statsApi.fetchGroups();
+function getPage() {
+  const page = Astro.url.searchParams.get("page");
+
+  if (page === null) {
+    return 1;
+  }
+
+  return Number(page);
+}
+
+function getSize() {
+  const size = Astro.url.searchParams.get("size");
+
+  if (size === null) {
+    return undefined;
+  }
+
+  return Number(size);
+}
+
+const page = getPage();
+const size = getSize();
+
+const matches = await statsApi.fetchGroups({ page, size });
 ---
 
 <MatchListLayout
@@ -15,6 +38,17 @@ const matches = await statsApi.fetchGroups();
 >
   <div class="flex flex-col">
     <h1 class="text-4xl my-6 text-center">ETLegacy Stats</h1>
-    <MatchList client:load matches={matches.items} type={type} />
+    <MatchList
+      client:load
+      matches={matches.items}
+      size={size}
+      currentUrl={Astro.url.toString()}
+    />
+    <MatchPagination
+      client:load
+      page={page}
+      totalPages={matches.total_pages}
+      currentUrl={Astro.url.toString()}
+    />
   </div>
 </MatchListLayout>
