Do anal stuff via proxy

--- a/astro-server/src/layouts/MatchDetailsLayout.astro
+++ b/astro-server/src/layouts/MatchDetailsLayout.astro
@@ -33,12 +33,14 @@ const { frontmatter } = Astro.props;
     <script
       defer
       data-domain="etlstats.stiba.lol"
-      src="https://app.lythia.dev/collect/a/script.js"
+      data-api="/anal/a"
+      src="/anal/a/script.js"
       is:inline></script>
     <script
       defer
+      data-api="/anal/m"
       data-domain="etlstats.stiba.lol"
-      src="https://app.lythia.dev/collect/m/script.js"
+      src="/anal/m/script.js"
       is:inline></script>
   </body>
 </html>
