Revert "Update URL of scripts"
This reverts commit d5b2e387264cd2f1e3cfdd98ae3b6ed76a734ecc.

--- a/astro-server/src/layouts/MatchDetailsLayout.astro
+++ b/astro-server/src/layouts/MatchDetailsLayout.astro
@@ -33,12 +33,12 @@ const { frontmatter } = Astro.props;
     <script
       defer
       data-domain="etlstats.stiba.lol"
-      src="https://app.lythia.dev/collect/a/script.js"
+      src="https://app.lythia.dev/collect/analytics/script.js"
       is:inline></script>
     <script
       defer
       data-domain="etlstats.stiba.lol"
-      src="https://app.lythia.dev/collect/m/script.js"
+      src="https://app.lythia.dev/collect/metrics/script.js"
       is:inline></script>
   </body>
 </html>
