--- a/astro-server/src/layouts/MatchListLayout.astro
+++ b/astro-server/src/layouts/MatchListLayout.astro
@@ -33,12 +33,12 @@ const { frontmatter } = Astro.props;
     <script
       defer
       data-domain="etlstats.stiba.lol"
-      src="https://app.lythia.dev/collect/a/script.js"
+      src="https://app.lythia.dev/collect/analytics/script.js"
       is:inline></script>
     <script
       defer
       data-domain="etlstats.stiba.lol"
-      src="https://app.lythia.dev/collect/m/script.js"
+      src="https://app.lythia.dev/collect/metrics/script.js"
       is:inline></script>
   </body>
 </html>
