Revert "Do anal stuff via proxy"
This reverts commit ec9e010487fd0238c2dfdb3a122e4feb43ce4f26.

--- a/astro-server/src/layouts/MatchDetailsLayout.astro
+++ b/astro-server/src/layouts/MatchDetailsLayout.astro
@@ -33,14 +33,12 @@ const { frontmatter } = Astro.props;
     <script
       defer
       data-domain="etlstats.stiba.lol"
-      data-api="/anal/a"
-      src="/anal/a/script.js"
+      src="https://app.lythia.dev/collect/a/script.js"
       is:inline></script>
     <script
       defer
-      data-api="/anal/m"
       data-domain="etlstats.stiba.lol"
-      src="/anal/m/script.js"
+      src="https://app.lythia.dev/collect/m/script.js"
       is:inline></script>
   </body>
 </html>
