--- a/astro-server/src/layouts/MatchDetailsLayout.astro
+++ b/astro-server/src/layouts/MatchDetailsLayout.astro
@@ -33,14 +33,12 @@ const { frontmatter } = Astro.props;
     <script
       defer
       data-domain="etlstats.stiba.lol"
-      data-api="/anal/a"
-      src="/anal/a/script.js"
+      src="https://app.lythia.dev/collect/analytics/script.js"
       is:inline></script>
     <script
       defer
       data-domain="etlstats.stiba.lol"
-      data-api="/anal/m"
-      src="/anal/m/script.js"
+      src="https://app.lythia.dev/collect/metrics/script.js"
       is:inline></script>
   </body>
 </html>
