Add nginx and analytics

--- a/astro-server/src/layouts/MatchListLayout.astro
+++ b/astro-server/src/layouts/MatchListLayout.astro
@@ -30,5 +30,18 @@ const { frontmatter } = Astro.props;
     <main class="max-w-[1300px] mx-auto">
       <slot />
     </main>
+
+    <script
+      defer
+      data-domain="etlstats.stiba.lol"
+      data-api="/anal/a"
+      src="/anal/a/script.js"
+      is:inline></script>
+    <script
+      defer
+      data-domain="etlstats.stiba.lol"
+      data-api="/anal/m"
+      src="/anal/m/script.js"
+      is:inline></script>
   </body>
 </html>
