--- a/astro-server/src/pages/index.astro
+++ b/astro-server/src/pages/index.astro
@@ -3,6 +3,7 @@ import { MatchList } from "../components/MatchList";
 import MatchListLayout from "../layouts/MatchListLayout.astro";
 import { MatchPagination } from "../components/MatchPagination.tsx";
 import { statsApi } from "../util/stats-api";
+import { MatchTypeMenu } from "../components/MatchTypeMenu";
 
 function getPage() {
   const page = Astro.url.searchParams.get("page");
@@ -37,7 +38,8 @@ const matches = await statsApi.fetchGroups({ page, size });
   }}
 >
   <div class="flex flex-col">
-    <h1 class="text-4xl my-6 text-center">ETLegacy Stats</h1>
+    <a href="/" class="text-4xl my-6 text-center">ETLegacy Stats</a>
+    <MatchTypeMenu currentUrl={Astro.url.toString()} size={size} />
     <MatchList
       matches={matches.items}
       size={size}
